# rm_dgl_proc

./: CMakeLists.txt  README.md
include/: contours_detector.h  rm_dgl_proc.h  rm_std.h  rm_vector.h
src/: main.cpp  rm_dgl_proc.cpp
